2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdashpattern.[ch]
	* app/core/gimpstrokeoptions.c: moved more code to the new files.

2005-05-19  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpdashpattern.[ch]: new files with coode split out of
	gimpstrokeoptions.c.

	* app/core/gimpstrokeoptions.c: use gimp_dash_pattern_from_preset().

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: don't allow copy and paste at the same
	time, fixed exit codes.

2005-05-19  Michael Natterer  <mitch@gimp.org>

	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/dbbrowser/gimpprocbox.[ch]: removed.

	* plug-ins/dbbrowser/gimpbrowser.[ch]: new widget derived from
	GtkHPaned. Contains lots of common code from the procedure and
	plug-in browsers.

	* plug-ins/dbbrowser/gimpprocbrowser.c
	* plug-ins/dbbrowser/plugin-browser.c: use a GimpBrowser, lots of
	cleanups.

	* plug-ins/dbbrowser/gimpprocbrowser.c: support all possible search
	types. Addresses bug #301201.

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_dialog_show): set the
	file dialogs transient for the parent window (display or toolbox).

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-snap.c: fix compilation on IRIX (bug #304685).

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell.c: removed the 2px border and
	replaced it with a 1px spacing in the main vbox. Makes the screen
	edges active when working in fullscreen mode (bug #165774).

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell.c: hack around with gtk+ widget
	styles to get rid of the menubar padding in fullscreen mode.

2005-05-18  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: implemented pasting.
	s/mime-type/target/g because that's what it is.

2005-05-18  Michael Natterer  <mitch@gimp.org>
